# wow-studio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  NOTES  README.md  TODO.md  ToolHubWindow.pdn
.github/workflows/: cmake-multi-platform.yml
resources/shaders/: MapTile.hlsl  SimpleTriangle.hlsl  WorldGrid.hlsl
resources/ui/: ProjectSelectionWindow.lua
src/: main.cpp
src/components/: BaseComponent.h  Camera.h  Doodad.h  MapTile.h  Model.h  WorldModelObject.h
src/data/: ClientData.h  CommonFileTypes.h  DBCFile.h  Entity.h  Misc.cpp  Misc.h  SettingsFile.cpp  SettingsFile.h  WorldData.h
src/data/Archive/: ArchiveMgr.h  IArchive.h  MPQArchive.cpp  MPQArchive.h
src/data/archive/: ArchiveMgr.cpp  ArchiveMgr.h  IArchive.h  MPQArchive.cpp  MPQArchive.h
src/graphics/: IWindow.cpp  IWindow.h  Renderer.h  Rendering.cpp  Rendering.h  Texture.h  WindowMgr.h
src/graphics/imgui/: imgui.h
src/graphics/imgui/backends/: imgui_impl_diligent.cpp  imgui_impl_diligent.h  imgui_impl_sdl.cpp  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/graphics/imgui_extensions/: ImFileDialog.cpp  ImFileDialog.h  ImGuiExtension.cpp  ImGuiExtension.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiNotify.hpp  TextEditor.cpp
src/graphics/renderers/: MapTileRenderer.cpp  MapTileRenderer.h  WorldRenderer.cpp  WorldRenderer.h
src/graphics/windows/: MapSelectWindow.cpp  MapSelectWindow.h  MapViewWindow.cpp  MapViewWindow.h  ProjectSelectWindow.cpp  ProjectSelectWindow.h  ToolsHubWindow.cpp  ToolsHubWindow.h
src/loaders/: AsyncLoader.h  Listfile.cpp  Listfile.h  MapTileLoader.cpp  MapTileLoader.h  WorldDataLoader.cpp  WorldDataLoader.h
src/util/: HashingFunctions.h  MappedFile.cpp  MappedFile.h  SafeQueue.h  stb_image.h
src/util/nlohmann/: json.hpp  json_fwd.hpp
src/views/: IViewport.h  WorldView.h
src/windows/: MapSelectWindow.cpp  MapSelectWindow.h  MapViewWindow.cpp  MapViewWindow.h  ModelViewerWindow.cpp  ModelViewerWindow.h  ProjectSelectWindow.cpp  ProjectSelectWindow.h  ToolsHubWindow.cpp  ToolsHubWindow.h
src/windows/components/: Filebrowser.h
